# Helix.AI

./: .dockerignore  .gitignore  BioAgent-Output-Schema-Example.json  BioAgent-Output-Schema.json  CHANGELOG.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DNA_SYNTHESIS_WORKFLOW_DEMO.md  ENVIRONMENT_SETUP.md  Gradio_UI.py  LICENSE  MICROSERVICES_README.md  NATURAL_LANGUAGE_GUIDE.md  PROJECT_STATUS_ANALYSIS.md  README.md  RELEASE_CHECKLIST.md  SERVICE_STATUS.md  TRL_ASSESSMENT.md  UNIFIED_ARCHITECTURE_SUMMARY.md  UV_SUPPORT.md  UX_IMPROVEMENTS.md  annotated_tree.newick  annotated_tree_annotations.tsv  app-v2.py  app.py  build-and-push-backend.sh  check-deployment-status.sh  check-gitignore.sh  conftest.py  current-policy.json  demo_app.py  docker-compose.yml  generate_random_seqs.py  init.sql  monitor_docker_build.sh  package-lock.json  package.json  pytest.ini  requirements.txt  (+8 more)
tests/demo_scenarios/: INDEX.md  README.md  check_demo_outputs.sh  check_dependencies.py  cloud_smoke_test.py  conftest.py  demo_cli.py  demo_handle_natural_command_flow.py  install.sh  pyproject.toml  run_fastqc_full_execution.py  run_real_demo.sh  smart_agents_demo.py  test_job_id_detection.py  test_real_execution.py  test_scenarios.py  verify_installation.py
tests/demo_scenarios/baselines/: ask_basic_question.json  ask_methodology_guidance.json  ask_tool_recommendation.json  edge_guru_no_execution.json  edge_low_confidence_intent.json  edge_missing_infrastructure_decision.json  execute_complex_workflow.json  execute_fastqc_basic.json  execute_single_cell_analysis.json  execute_with_codegen.json
tests/demo_scenarios/framework/: __init__.py  executor.py  reporter.py  scenario.py  tracer.py  validator.py
tests/demo_scenarios/scenarios/: ask_basic_question.yaml  execute_fastqc_basic.yaml  (+12 more)
(+898 files in other folders)
