[project]
name = "helix-ai-demo"
version = "1.0.0"
description = "Demo and evaluation system for Helix.AI multi-agent system"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Framework dependencies (required for mock mode)
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[project.optional-dependencies]
# Backend dependencies (required for real execution)
backend = [
    "anthropic>=0.25.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
]

# All dependencies (framework + backend)
all = [
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "anthropic>=0.25.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
]

# Development dependencies
dev = [
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [".", "../../backend"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
